fix z-index

--- a/semcore/base-trigger/src/style/base-trigger.shadow.css
+++ b/semcore/base-trigger/src/style/base-trigger.shadow.css
@@ -58,6 +58,10 @@ SBaseTrigger[disabled] {
   pointer-events: none; /* Disable link interactions */
 }
 
+SBaseTrigger[keyboardFocused] {
+  z-index: 1;
+}
+
 SInner {
   display: inline-flex;
   align-items: center;
